# VOID.project

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  compose.override.yml.disabled  compose.yml
backend/: .gitignore  Dockerfile  go.mod  go.sum  sqlc.yaml
backend/cmd/server/: main.go
backend/internal/api/: deps.go  router.go
backend/internal/crypto/: argon2.go  chacha.go  crypto_test.go  jwt.go  uuid.go  x25519.go
backend/internal/models/: app.go  audit.go  session.go  team.go  user.go
backend/internal/repository/: admin_analytics.sql.go  admin_instance.sql.go  admin_invites.sql.go  api_keys.sql.go  apps.sql.go  audit.sql.go  auth.sql.go  envs.sql.go  middleware_auth.sql.go  models.go  pool.go  querier.go  redis.go  secrets.sql.go  sessions.sql.go  teams.sql.go  users.sql.go
backend/migrations/: 001_init.sql  002_auth_sessions.sql  003_users_platform_role.sql  004_api_keys.sql  005_admin_tables.sql  006_sessions_client.sql  007_users_full_name.sql
cli/: .gitignore  Cargo.toml
cli/.github/workflows/: release.yml
cli/src/: main.rs
cli/src/api/: client.rs
cli/src/commands/: apps.rs  auth.rs  envs.rs  init.rs  mod.rs  run.rs  secrets.rs  shell.rs  teams.rs
cli/src/config/: endpoint.rs  global.rs  mod.rs  project.rs
cli/src/crypto/: chacha.rs  keys.rs  mod.rs  x25519.rs
frontend/: .gitignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/public/: manifest.json
frontend/src/: index.css  main.tsx  router.tsx
frontend/src/lib/: api.ts  crypto.ts  (+1 more)
nginx/: nginx.conf
nginx/conf.d/: void.conf
(+78 files in other folders)
